Fixed DOB label overlap, added required field for login and register forms

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -164,4 +164,9 @@ body{
   height: 4vh;
 }
 
+#DOB::-webkit-datetime-edit-year-field:not([aria-valuenow]),
+::-webkit-datetime-edit-month-field:not([aria-valuenow]),
+::-webkit-datetime-edit-day-field:not([aria-valuenow]) {
+  color: transparent;
+}
 
